--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -63,9 +63,12 @@ target_include_directories(opengl_app PRIVATE
     ${GLFW_INCLUDE_DIRS}
     ${GLM_INCLUDE_DIRS}
     externals/glad/include
+    include
 )
 
 target_link_libraries(opengl_app PRIVATE
     ${GLFW_LIBRARIES}
     opengl32
 )
+
+file(COPY shaders/ DESTINATION ${CMAKE_BINARY_DIR}/shaders)
